--- a/index.css
+++ b/index.css
@@ -1,3 +1,38 @@
 body {
-    background-color: #FFBA00
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    padding-top: 2rem;
+    padding-right: 0px;
+    padding-bottom: 2rem;
+    padding-left: 0px;
+    width: 100%;
+    background: #FFBA00;
+    font-family: 'Inconsolata', monospace;
+    text-align: center;
+}
+
+main {
+    background: white;
+    width: 90%;
+    margin: auto;
+    border-radius: 5px;
+    padding: 2rem 0;
+}
+
+h1 {
+    margin: 3rem 1rem 6rem 1rem;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+p {
+    background-color: whitesmoke;
+    font-size: 16px;
+    line-height: 2;
+    letter-spacing: 1px
 }
