--- a/pages/page.css
+++ b/pages/page.css
@@ -14,11 +14,15 @@ body {
 }
 
 main {
+    display: flex;
+    flex-direction: column;
     background: white;
     width: 90%;
     margin: auto;
     border-radius: 5px;
     padding: 2rem 0;
+    margin-bottom: 7rem;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25);
 }
 
 h1 {
